Plan redstone replay updates through a queue